--- a/asiakastyytyvaisyys/kysely.css
+++ b/asiakastyytyvaisyys/kysely.css
@@ -3,7 +3,7 @@
   }
 
 #body {
-    text-align: center; /* Align the form elements to the center */
+    text-align: center; /* Align_the_form_elements_to_the_center */
     font-family: monospace, serif;
     font-size: larger;
     background-color: rgb(95, 95, 95);
