--- a/flexbox_harjoitukset/flexbox.css
+++ b/flexbox_harjoitukset/flexbox.css
@@ -9,9 +9,9 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    /*justify content ->space evenly*/
+    /*justify content_->space evenly*/
     align-content: normal;
-    /*aling-contet->strech*/
+    /*aling-contet_->strech*/
     gap: 50px 40px;
 }
 .header-main1 div{
