--- a/html_css_js_harjoittelua/untitled-2.css
+++ b/html_css_js_harjoittelua/untitled-2.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-/*juuri väreille*/
+/*juuri_väreille*/
 :root {
   --background: gray;
   --color: #white;
