--- a/main.css
+++ b/main.css
@@ -14,6 +14,9 @@ h1 {
     background-color: snow;
     text-shadow: 2px 2px 2px black;
 }
+h2 {
+    color:var(--special_red);
+}
 /*kokolistan moutoilu tässä*/
 ul {
     list-style-type: circle;
