--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     font-family:Arial, Helvetica, sans-serif;
     background-color: rgb(222, 222, 222);
 }
-/*otsikko*/
+/*otsikko 1&2*/
 h1 {
     color: var(--special_red);
     text-align: center;
