--- a/js_rocket_harjoitukset/CSS/rocket.css
+++ b/js_rocket_harjoitukset/CSS/rocket.css
@@ -42,8 +42,10 @@ left: 0;
     background-color: red;
     transition: bottom 10000ms;
 }
-
-body.body-state3 .rocket {
+body.body-state1 .rocket {
+    transition: none;
+}
+body.body-state3 .rocket, body.body-state4 .rocket {
     bottom: 2000px;
 }
 
