--- a/js_rocket_harjoitukset/CSS/rocket.css
+++ b/js_rocket_harjoitukset/CSS/rocket.css
@@ -3,7 +3,7 @@
 .left {
 background-color: lightgray;
 position: fixed;
-width: 50%;
+width: 20%;
 height: 100%;
 top:0;
 left: 0;
@@ -14,7 +14,7 @@ left: 0;
 .right{
     background-color: black;
     position: fixed;
-    width: 50%;
+    width: 80%;
     height: 100%;
     top:0;
     right: 0;
@@ -27,26 +27,38 @@ left: 0;
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 1080px;
     height: 50px;
 }
 
 /*rocket*/
 
 .rocket {
-    position: absolute;
-    left: 50%;
+    position: x, y = 0;
+    left: 20%;
+    margin-left: 0%;
     bottom: 50px;
-    width: 50px;
-    height: 100px;
-    background-color: red;
+    width: 1080px;
+    height: 1080px;
+    background: url('../img/rocket.jpg');
+    
     transition: bottom 10000ms;
 }
 body.body-state1 .rocket {
+    background: url('../img/rocket.jpg') no-repeat;
+    transition: none;
+}
+body.body-state2 .rocket {
+    background: url('../img/rocket.jpg') no-repeat;
     transition: none;
 }
 body.body-state3 .rocket, body.body-state4 .rocket {
+    background-image: url('../img/rocket.gif');
     bottom: 2000px;
+}
+body.body-state5 .rocket {
+    background-image: url('../img/boom.png');
+    transition: none;
 }
 
 a{
