--- a/js_rocket_harjoitukset/CSS/rocket.css
+++ b/js_rocket_harjoitukset/CSS/rocket.css
@@ -4,7 +4,7 @@
 .left {
 background-color: lightgray;
 position: fixed;
-width: 20%;
+width: 50%;
 height: 100%;
 top:0;
 left: 0;
@@ -15,7 +15,7 @@ left: 0;
 .right{
     background-color: black;
     position: fixed;
-    width: 80%;
+    width: 50%;
     height: 100%;
     top:0;
     right: 0;
@@ -42,6 +42,7 @@ left: 0;
     width: 1080px;
     height: 1080px;
     background: url('../img/rocket.jpg');
+    background-size: contain;
     transition: bottom 10000ms;
 }
 body.body-state1 .rocket {
