flying_style_position_update

--- a/js_rocket_harjoitukset/CSS/rocket.css
+++ b/js_rocket_harjoitukset/CSS/rocket.css
@@ -57,10 +57,11 @@ left: 0;
     height: 50px;
 }
 
-/*rocket*/
+/*rocket_and_flying_style_position*/
 
 .rocket {
     position: x, y = 0;
+    /*position: absolute;*/
     left: 20%;
     margin-left: 0%;
     bottom: 50px;
