--- a/cv_front/style.css
+++ b/cv_front/style.css
@@ -8,13 +8,24 @@
   font-family: 'FontAwesome', sans-serif;
 }
 
+/*root_colors*/
+
+:root {
+	--bg: rgb(2, 2, 2);
+	--red: rgb(212, 0, 0);
+	--text: rgb(255, 252, 252);
+	--gray: rgb(92, 92, 92);
+	--gray_opa: rgba(92, 92, 92, 0.212);
+
+}
+
 /* Utils */
 
 .clear {
 	clear: both;
 }
 .purple {
-	color: #837c9a;
+	color: var(--gray);
 }
 
 .block {
@@ -52,7 +63,7 @@
 }
 	.line_left,
 	.line_right{
-		border-top: 1px solid #434247;
+		border-top: 1px solid var(--gray);
 		width: 305px;
 		margin-top: 13px;
 	}
@@ -65,8 +76,8 @@
 	.left_circle, 
 	.central_circle, 
 	.right_circle {
-		background: rgb(69,68,73);
-		background: rgba(255,255,255, 0.15);
+		background: var(--gray);
+		background: var(--gray_opa);
 		position: absolute;
 		border-radius: 50px;
 	}
@@ -92,14 +103,14 @@
 /* Main tags */
 
 body {
-	background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png) repeat;
+	background-color: var(--bg);
 	margin: 0;
 }
 
 h1,h2,h3, h4 {
 	font-family: 'Lato', Helvetica, sans-serif;
 	font-weight: 300;
-	color: #48DA9B;
+	color: var(--red);
 }
 	h1 {
 		font-size: 48px;
@@ -118,18 +129,22 @@ h1,h2,h3, h4 {
 		font-weight: 400;
 	}
 
+span {
+	font-weight: bolder;
+}
+
 blockquote {
 	font-style: italic;
 	margin: 25px 0;
 	padding-left: 20px;
-	border-left: 2px solid #48DA9B;
+	border-left: 2px solid var(--red);
 }
 	
 blockquote, p , a, li {
 	font-family: 'Lato', Helvetica, sans-serif;
 	font-weight: 300;
 	font-size: 15px;
-	color: #e4e3e8;
+	color: var(--text);
 }
 
 a:focus { 
@@ -147,7 +162,7 @@ ul {
 	}
 	li:before {
 		content: "• ";
-		color: #837c9a;
+		color: var(--gray);
 		font-size: 20px;
 		padding-right: 8px;
 	}
@@ -160,12 +175,12 @@ ul {
 }
 	#header {
 		height: 130px;
-		border-bottom: 1px solid #403F44;
+		border-bottom: 1px solid var(--gray);
 	}
 		.header_logotype_container {
 			width: 260px;
 			height: 130px;
-			border-right: 1px solid #403F44;
+			border-right: 1px solid var(--gray);
 			float: left;
 		}
 		.header_menu_container {
@@ -182,13 +197,13 @@ ul {
 	}
 	#content_container {
 		width: 699px;
-		border-left: 1px solid #403F44;
+		border-left: 1px solid var(--gray);
 		float: left;
 	}
 	#footer {
 		width: 960px;
 		height: 60px;
-		border-top: 1px solid #403F44;
+		border-top: 1px solid var(--gray);
 		display: inline-block;
 	}
 
@@ -202,7 +217,7 @@ ul {
 .logotype_occupation{
 	text-transform: uppercase;
 	margin-top: 5px;
-	color: #5ce2af;
+	color: var(--red);
 	font-size: 14px;
 	letter-spacing: 2px;
 	padding-left: 7px;
@@ -220,13 +235,13 @@ ul {
 		font-style: italic;
 		line-height: 45px;
 		padding: 16px 17px;
-		background: #353638;
+		background: var(--gray_opa);
 	}
 		.download_print_buttons a:hover {
-			background: #020609;
+			background: var(--red);
 		}
 		.download_print_buttons .icon {
-			color: #02070a;
+			color: var(--text);
 			padding-right: 6px;
 			font-style: normal;
 			font-size: 18px;
@@ -236,7 +251,7 @@ ul {
 			top: 2px;
 		}
 			.download_print_buttons a:hover .icon {
-				color: #e4e3e8;
+				color: var(--text);
 			}
 			
 .header_menu {
@@ -247,7 +262,7 @@ ul {
 	.header_menu a{
 		text-decoration: none;
 		padding: 0 20px;
-		border-left: 1px solid #e4e3e8;
+		border-left: 1px solid var(--text);
 		font-size: 16px;
 		font-weight: 400;
 	}
@@ -255,7 +270,7 @@ ul {
 		border-left: none;
 	}
 		.header_menu a:hover {
-			color: #837c9a;
+			color: var(--red);
 		}
 		
 /* LEFT NAV */
@@ -268,15 +283,15 @@ ul {
 .profile_frame{
 	width: 230px;
 	height: 260px;
-	background: black;
-	border: 1px solid #403F44;
+	background: var(--bg);
+	border: 1px solid var(--text);
 	margin-top: 30px;
 }
 	.profile_picture{
 		width: 210px;
 		height: 240px;
 		margin:10px;
-		background: url(//s3-us-west-2.amazonaws.com/s.cdpn.io/86033/profile/profile-512_3.jpg) 100% /210px no-repeat;
+		background: 100% /210px no-repeat;
 	}
 
 .hello_content,
@@ -301,7 +316,7 @@ ul {
 .special_button {
 	margin-top: 25px;
 	display: block;
-	background: #48DA9B;
+	background: var(--red);
 	width: 230px;
 	height: 50px;
 	position: relative;
@@ -315,7 +330,7 @@ ul {
 		width: 30px;
 		height: 30px;
 		z-index: 9;
-		background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png) repeat;
+		background: repeat;
     transform: rotate(45deg);
 	}
 	.cut2:before {
@@ -326,12 +341,12 @@ ul {
 	    width: 30px;
 	    height: 30px;
 	    z-index: 9;
-	    background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png) repeat;
+	    background: repeat;
       transform: rotate(45deg);
 	}
 	.content {
 	    text-align: center;		
-	    color: #04080b;
+	    color: var(--text);
 	    width: 100%;
 	    height: 40px;
 	    position: absolute;
@@ -341,12 +356,12 @@ ul {
 	    padding: 16px 0 0;
         top: -4px;
         bottom: 10px;
-	    border-top: 1px solid #403F44;
-	    border-bottom: 1px solid #403F44;
+	    border-top: 1px solid var(--gray);
+	    border-bottom: 1px solid var(--gray);
 	}
 	.send_message_button:hover,
 	.special_button:hover {
-		background: #29C782;
+		background: var(--gray_opa);
 	}
 
 .get_social_content {
@@ -361,7 +376,7 @@ ul {
 	.social_icons a {
 		font-size: 35px;
 		text-decoration: none;
-		color: #000507;
+		color: var(--text);
 		padding: 0;
 		padding: 0 5px;
 	}
@@ -403,7 +418,7 @@ ul {
 		width: 455px;
 	}
 	.profile_quote  .entypo-quote {
-		color: #3d3a41;
+		color: var(--gray);
 		font-size: 80px;
     font-style: normal;
 		position: absolute;
